--- a/candlewebsite/app/globals.css
+++ b/candlewebsite/app/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -16,8 +17,8 @@
   }
 }
 
-body {}
-
+body {
+}
 @layer utilities {
   .text-balance {
     text-wrap: balance;
